Fix: Update config repository - replace localhost with Docker container names for all services

--- a/config-repo/order-service.yaml
+++ b/config-repo/order-service.yaml
@@ -9,11 +9,11 @@ spring:
   application:
     name: order-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/order_db
+    url: jdbc:postgresql://postgres:5432/order_db
   
   # RabbitMQ Yapılandırması
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
