--- a/config-repo/product-service.yaml
+++ b/config-repo/product-service.yaml
@@ -9,7 +9,7 @@ spring:
   application:
     name: product-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/product_db
+    url: jdbc:postgresql://postgres:5432/product_db
 
 springdoc:
   info:
