--- a/config-repo/application.yaml
+++ b/config-repo/application.yaml
@@ -42,7 +42,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://service-registry:8761/eureka/
 
 # Swagger/OpenAPI (Ortak)
 springdoc:
@@ -73,14 +73,14 @@ management:
       probability: 1.0  # %100 sampling (production'da düşürülebilir)
   zipkin:
     tracing:
-      endpoint: http://localhost:9411/api/v2/spans  # Zipkin server URL
+      endpoint: http://zipkin:9411/api/v2/spans  # Zipkin server URL
 
 # Redis Cache Configuration (Ortak)
   cache:
     type: redis  # Redis'i cache provider olarak kullan
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
       timeout: 2000ms  # Connection timeout
       lettuce:
