--- a/config-repo/inventory-service.yaml
+++ b/config-repo/inventory-service.yaml
@@ -9,7 +9,7 @@ spring:
   application:
     name: inventory-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/inventory_db
+    url: jdbc:postgresql://postgres:5432/inventory_db
 
 springdoc:
   info:
