--- a/config-repo/user-service.yaml
+++ b/config-repo/user-service.yaml
@@ -9,7 +9,7 @@ spring:
   application:
     name: user-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/user_db
+    url: jdbc:postgresql://postgres:5432/user_db
 
 springdoc:
   info:
