--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -355,8 +355,9 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: default
       EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://service-registry:8761/eureka/
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_CLOUD_CONFIG_URI: http://config-server:8888
     networks:
       - microservices-network
     depends_on:
@@ -364,21 +365,12 @@ services:
         condition: service_healthy
       service-registry:
         condition: service_healthy
-      user-service:
-        condition: service_healthy
-      product-service:
-        condition: service_healthy
-      order-service:
-        condition: service_healthy
-      inventory-service:
-        condition: service_healthy
-      notification-service:
-        condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1"]
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 10
+      start_period: 60s
 
 networks:
   microservices-network:
