feat: Review-service eklendi ve entegre edildi
- Review-service mikroservisi oluşturuldu
- PostgreSQL database schema ve Flyway migrations eklendi
- Redis cache entegrasyonu yapıldı
- Review ve RatingSummary entity'leri Serializable yapıldı
- Cache annotation'ları düzeltildi (#a0, #a1 formatı)
- API Gateway'e review-service route'u eklendi
- Rate limiting ve circuit breaker yapılandırıldı
- Product-service'e rating ve payment options kolonları eklendi
- Test review'ları oluşturuldu ve servis test edildi

--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -142,6 +142,25 @@ spring:
               args:
                 name: notificationServiceCircuitBreaker
                 fallbackUri: forward:/fallback/notification
+        
+        # Review Service route
+        - id: review-service
+          uri: lb://review-service
+          predicates:
+            - Path=/api/reviews/**
+          filters:
+            - StripPrefix=1  # /api kısmını çıkarır
+            # Rate Limiting (Review Service için özel limit)
+            - name: RequestRateLimiter
+              args:
+                redis-rate-limiter.replenishRate: 30  # Review service için yüksek limit (okuma yoğun)
+                redis-rate-limiter.burstCapacity: 60
+                redis-rate-limiter.requestedTokens: 1
+                key-resolver: "#{@ipKeyResolver}"
+            - name: CircuitBreaker
+              args:
+                name: reviewServiceCircuitBreaker
+                fallbackUri: forward:/fallback/review
 
 # Eureka yapılandırması
 eureka:
@@ -175,6 +194,8 @@ resilience4j:
       inventoryServiceCircuitBreaker:
         baseConfig: default
       notificationServiceCircuitBreaker:
+        baseConfig: default
+      reviewServiceCircuitBreaker:
         baseConfig: default
 
 # Actuator endpoints (Monitoring için)
