--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>order-service</module>
         <module>inventory-service</module>
         <module>notification-service</module>
+        <module>review-service</module>
     </modules>
 
     <properties>
