Fix: Product card overflow issues and API error handling
- Fixed bottom overflow errors in product cards for iPhone 14 Pro Max
- Optimized childAspectRatio values (0.60, 0.62, 0.68)
- Removed description on mobile devices to prevent overflow
- Made rating row more compact (smaller icons and fonts)
- Improved API error handling with better error messages
- Added timeout and network error handling in ApiService
- Optimized padding and spacing values
- Fixed text line heights for better compactness

--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -149,7 +149,7 @@ spring:
           predicates:
             - Path=/api/reviews/**
           filters:
-            - StripPrefix=1  # /api kısmını çıkarır
+            - StripPrefix=1  # /api kısmını çıkarır, /reviews/** kalır
             # Rate Limiting (Review Service için özel limit)
             - name: RequestRateLimiter
               args:
