Add Flutter build files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ application-local.yaml
 application-dev.yaml
 application-prod.yaml
 
+# Flutter
+flutter-app/.dart_tool/
+flutter-app/build/
+flutter-app/.flutter-plugins
+flutter-app/.flutter-plugins-dependencies
+flutter-app/.packages
+flutter-app/pubspec.lock
