--- a/notification-service/src/main/resources/application.yaml
+++ b/notification-service/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   
   datasource:
     # PostgreSQL veritabanı bağlantısı
-    url: jdbc:postgresql://localhost:5432/notification_db
+    url: jdbc:postgresql://postgres:5432/notification_db
     driver-class-name: org.postgresql.Driver
     username: postgres  # PostgreSQL kullanıcı adı (kendi şifrenizi girin)
     password: postgres  # PostgreSQL şifresi (kendi şifrenizi girin)
@@ -35,13 +35,14 @@ spring:
   # RabbitMQ Yapılandırması
   # Message Queue için (asenkron iletişim)
   rabbitmq:
-    host: localhost  # RabbitMQ server adresi
+    host: rabbitmq  # RabbitMQ server adresi
     port: 5672  # RabbitMQ portu
     username: guest  # Default kullanıcı adı
     password: guest  # Default şifre
     # Listener ayarları
     listener:
       simple:
+        default-requeue-rejected: false
         acknowledge-mode: auto  # Mesajlar otomatik olarak acknowledge edilir
         retry:
           enabled: true  # Hata durumunda retry aktif
@@ -53,7 +54,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/  # Service Registry'nin adresi
+      defaultZone: http://service-registry:8761/eureka/  # Service Registry'nin adresi
 
 # Swagger/OpenAPI Yapılandırması
 springdoc:
