--- a/review-service/src/main/resources/application.yaml
+++ b/review-service/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   
   datasource:
     # PostgreSQL veritabanı bağlantısı
-    url: jdbc:postgresql://localhost:5432/review_db
+    url: jdbc:postgresql://postgres:5432/review_db
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: postgres
@@ -40,7 +40,7 @@ spring:
 
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
       timeout: 2000ms
 
@@ -48,7 +48,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/  # Service Registry'nin adresi
+      defaultZone: http://service-registry:8761/eureka/  # Service Registry'nin adresi
 
 # Swagger/OpenAPI Yapılandırması
 springdoc:
