--- a/shop-service/src/main/resources/application.yaml
+++ b/shop-service/src/main/resources/application.yaml
@@ -66,7 +66,7 @@ eureka:
     service-url:
       defaultZone: http://service-registry:8761/eureka/
   instance:
-    hostname: localhost
+    hostname: shop-service
 
 management:
   endpoints:
