feat: UI improvements and location service enhancements
- Move 'See All' button to category row with Stack layout
- Remove 'Nearby Shops' title, show cards directly
- Add location service with fast caching (lastKnown + timeout)
- Request location permission on onboarding/login screens
- Add location refresh button in home header
- Pass city parameter to shops/jobs/hobby/venues pages for filtering
- Add search service with Elasticsearch integration
- Add payment/refund observability (Prometheus rules, Grafana dashboard)
- Add load test scripts (k6) for smoke, checkout, and upload
- Add database indexes for performance (products, reviews)
- Add GitHub Actions CI workflow
- Improve location handling: guest mode always asks, logged-in users asked once

--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -75,6 +75,25 @@ spring:
                 name: productServiceCircuitBreaker
                 fallbackUri: forward:/fallback/product
         
+        # Search Service route
+        - id: search-service
+          uri: lb://search-service
+          predicates:
+            - Path=/api/search/**
+          filters:
+            - StripPrefix=1
+            - AddResponseHeader=Cache-Control, public, max-age=30
+            - name: RequestRateLimiter
+              args:
+                redis-rate-limiter.replenishRate: ${rate-limiter.search.replenish:30}
+                redis-rate-limiter.burstCapacity: ${rate-limiter.search.burst:60}
+                redis-rate-limiter.requestedTokens: ${rate-limiter.search.tokens:1}
+                key-resolver: "#{@ipKeyResolver}"
+            - name: CircuitBreaker
+              args:
+                name: searchServiceCircuitBreaker
+                fallbackUri: forward:/fallback
+        
         # Order Service route
         - id: order-service
           uri: lb://order-service
