fix: navigation improvements and product service circuit breaker
- Fix navigation: back button now returns to correct page (home/explore) based on source
- Add 'from' query parameter to track navigation source
- Update all listing pages (Shops, Jobs, Entertainment, HobbyGroups) with smart back navigation
- Fix search service Elasticsearch API compatibility (use CriteriaQuery instead of deprecated QueryBuilders)
- Fix search service pom.xml XML entity encoding (&amp;)
- Improve location service integration with proper permission handling
- Update action buttons to use correct navigation with source tracking

--- a/search-service/pom.xml
+++ b/search-service/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>search-service</artifactId>
     <name>Search Service</name>
-    <description>Search & discovery microservice backed by Elasticsearch</description>
+    <description>Search &amp; discovery microservice backed by Elasticsearch</description>
 
     <dependencies>
         <dependency>
